z-index bugfix

--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ body {
     position: fixed;
     height: 150px;
     width: 100%;
-    z-index: -1;
+    z-index: -2;
     text-align: center;
 }
 
